--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,13 @@ body {
 	text-align: center;   
 }
 
+.tabbar {
+	background-color: #ce422b;
+	font-size: 50%;
+	padding: 2px;
+	border-radius: 20px;
+}
+
 .aboutme {
 	background-color: #666666;
 	color: #fff;
