--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 
 .tabbar {
 	background-color: #ce422b;
-	font-size: 50%;
+	color: #fff;
 	padding: 2px;
 	border-radius: 20px;
 	height: auto;
