Title height changes

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 	padding: 2px;
 	border-radius: 20px;
 	width: 500px;
-	height: auto;
+	height: 200;
 	text-align: center;
 	border: 1px solid #ccc;   
 }
