--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,17 @@ div.tab a:focus, .active {
 	border: 1px solid #ccc;
 }
 
+.helibutton {
+	background-color: #ce422b;
+	color: #fff;
+	margin: auto;
+	font-size: 180%;
+	width: 180px;
+	border-radius: 10px;
+	border: 1px solid #ccc;
+	text-align: center;
+}
+
 .active {
     background-color: #a83524;
 	color: #fff;
@@ -108,5 +119,10 @@ div.tab a:focus, .active {
 	width: 1000px;
 	margin: auto;
 	border: 1px solid #ccc;
+}
+
+.helitext {
+	color: white;
+	display: none;
 }
 	
