--- a/css/bf2.css
+++ b/css/bf2.css
@@ -2,6 +2,7 @@
 	background-color: #413F3E;
 	color: white;
 	text-align: center;
+	outline: none;
 	font-size: 25px;
 	padding: 15px 32px;
 
@@ -11,6 +12,7 @@
 	background-color: #413F3E;
 	color: white;
 	text-align: center;
+	outline: none;
 	font-size: 25px;
 	padding: 15px 32px;
 	box-shadow: 0 0 15px ##b3e6ff;
