--- a/css/bf2.css
+++ b/css/bf2.css
@@ -14,5 +14,5 @@
 	outline: none;
 	font-size: 25px;
 	padding: 15px 32px;
-	box-shadow: 0 0 15px ##b3e6ff;
+	box-shadow: 15px 15px 15px 15px ##b3e6ff;
 }
