--- a/css/bf2.css
+++ b/css/bf2.css
@@ -7,6 +7,8 @@
 	padding: 15px 32px;
 	border: solid;
 	border-width: 5px;
+	/*table-layout: fixed;*/
+	width: 12em;
 }
 
 .bf2-buttons:hover {
@@ -20,7 +22,7 @@
 	outline: none;
 	font-size: 25px;
 	padding: 15px 32px;
-	padding-left: 15px
+	padding-left: 100px
 	padding-right: 15px;
 	border: solid;
 	border-width: 5px;
